[gd_scene load_steps=4 format=3 uid="uid://cvv1bpkfdvqjw"]

[ext_resource type="Script" uid="uid://tupwtis13uye" path="res://Scripts/WhiteboardInterface.gd" id="1_e3gsa"]
[ext_resource type="FontFile" uid="uid://l1q8mfvbxty3" path="res://Fonts/dyslexiafont/OpenDyslexic-Regular.otf" id="2_ckebf"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7wk35"]
bg_color = Color(1, 1, 1, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="WhiteboardInterface" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_e3gsa")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="DrawingArea" type="Panel" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_7wk35")

[node name="ButtonsContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 20

[node name="UndoButton" type="Button" parent="VBoxContainer/ButtonsContainer"]
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
theme_override_fonts/font = ExtResource("2_ckebf")
theme_override_font_sizes/font_size = 20
text = "Undo"

[node name="RedoButton" type="Button" parent="VBoxContainer/ButtonsContainer"]
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
theme_override_fonts/font = ExtResource("2_ckebf")
theme_override_font_sizes/font_size = 20
text = "Redo"

[node name="ClearButton" type="Button" parent="VBoxContainer/ButtonsContainer"]
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
theme_override_fonts/font = ExtResource("2_ckebf")
theme_override_font_sizes/font_size = 20
text = "Clear"

[node name="DoneButton" type="Button" parent="VBoxContainer/ButtonsContainer"]
custom_minimum_size = Vector2(120, 50)
layout_mode = 2
theme_override_fonts/font = ExtResource("2_ckebf")
theme_override_font_sizes/font_size = 20
text = "Done"

[connection signal="draw" from="VBoxContainer/DrawingArea" to="." method="_on_drawing_area_draw"]
[connection signal="gui_input" from="VBoxContainer/DrawingArea" to="." method="_on_drawing_area_gui_input"]
[connection signal="pressed" from="VBoxContainer/ButtonsContainer/UndoButton" to="." method="_on_undo_button_pressed"]
[connection signal="pressed" from="VBoxContainer/ButtonsContainer/RedoButton" to="." method="_on_redo_button_pressed"]
[connection signal="pressed" from="VBoxContainer/ButtonsContainer/ClearButton" to="." method="_on_clear_button_pressed"]
[connection signal="pressed" from="VBoxContainer/ButtonsContainer/DoneButton" to="." method="_on_done_button_pressed"]
